tests/errors/output/basic.t
Can't assign value to variable